<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/popupWindowCameraBackground"
    android:layout_height="match_parent"
    android:padding="30dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="13dp"
        android:text="@string/camera_info_message1"
        android:id="@+id/textView1"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:padding="20dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="13dp"
        android:textColor="@color/white"
        android:text="@string/camera_info_message4"
        android:id="@+id/textView4"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" />
    <ImageView
        android:layout_gravity="center"
        android:src="@drawable/camera_info"
        android:layout_width="300dp"
        android:layout_height="200dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <TextView
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera_info_message2"
            android:textSize="15dp"
            android:textColor="@color/white"
            android:id="@+id/textView2"
            android:layout_gravity="right"
            android:layout_marginTop="14dp" />
        <TextView
            android:gravity="right"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera_info_message3"
            android:textSize="14dp"
            android:textColor="@color/white"
            android:id="@+id/textView3"
            android:layout_gravity="right"
            android:layout_marginTop="0dp" />
    </LinearLayout>
</LinearLayout>