<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/PopupWindow"
    android:background="@color/popupWindowRecommendationBackground"
    android:padding="5dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:background="@drawable/bg_recommendation_card"
        android:padding="15dp"
        android:textColor="@color/defaultFont"
        android:text="@string/info_message"
        android:textSize="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/toolLayout"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:gravity="right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:background="@drawable/dialog_bg_primary"
            android:textColor="#ffffff"
            android:textSize="15dp"
            android:id="@+id/viewWorld"
            android:text="@string/view_world"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:background="@drawable/dialog_bg_primary"
            android:textColor="#ffffff"
            android:textSize="15dp"
            android:id="@+id/close"
            android:layout_marginLeft="5dp"
            android:text="@string/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <SearchView
        android:background="@drawable/bg_recommendation_card"
        android:id="@+id/searchKey"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ListView
        android:fastScrollEnabled="true"
        android:background="@drawable/bg_recommendation_card"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </ListView>

</LinearLayout>